# qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
qml_book/: CMakeLists.txt  CMakeUserPresets.json
qml_book/chapter1/: CMakeLists.txt
qml_book/chapter1/src/: main.cpp
qml_book/chapter1/ui/: main.qml
qml_book/p-chapter1/: p-chapter1.qml  p-chapter1.qmlproject
